styles/widgets/_navigator.scss
@use "../mixin/icons" as *;
@use "../theme/theme";

.reactodia-navigator {
  display: block;
  overflow: hidden;

  background: theme.$navigator-background-fill;
  border: theme.$border-width-base solid theme.$border-color-base;
  border-radius: theme.$border-radius-s;
  box-shadow: theme.$canvas-box-shadow;

  transition:
    width theme.$transition-duration,
    height theme.$transition-duration;

  &--collapsed {
    width: 24px;
    height: 24px;
  }

  > canvas {
    transition: opacity theme.$transition-duration;
  }
  &--expanded > canvas { opacity: 1; }
  &--collapsed > canvas { opacity: 0; }

  &__toggle {
    position: absolute;
    background: transparent;
    border: none;
    outline-offset: -5px;
    padding: 4px;

    opacity: 0.5;
    transition: opacity theme.$transition-duration;

    &:not(:disabled):hover {
      opacity: 1;
    }

    &:disabled {
      opacity: 0.2;
    }
  }
  &--expanded &__toggle {
    top: 5px;
    left: 5px;
  }
  &--collapsed &__toggle {
    top: 0px;
    left: 0px;
  }

  &__toggle-icon {
    width: 18px;
    height: 18px;
    mask-size: 18px 18px;
    mask-repeat: no-repeat;
  }
  &--expanded &__toggle-icon {
    @include codicon("diff-removed");
  }
  &--collapsed &__toggle-icon {
    @include codicon("diff-added");
  }
}

